--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 body{
     margin: 0px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #202020
+    color: #202020;
 }
 
 h1{
@@ -21,7 +21,17 @@ a:hover {
 
 .container{
     width: 70%;
-    float: right;
+    clear:both;
+    margin: 0 auto;
+    background: #fff;
+    min-height: 100vh;
+}
+
+.container-head{
+    width: 70%;
+    clear:both;
+    margin: 0 auto;
+    background: #fff;
 }
 
 .sidebar{
@@ -34,13 +44,14 @@ a:hover {
 }
 
 .navbar{
-    background-color: #202020;
+    background-color: #fff;
     margin: 0;
     padding: 0;
     min-height: 150px;
     box-shadow: 0px 7px 17px 0px rgba(0,0,0,0.55);
     z-index: 9999;
     position: relative;
+    border-bottom: 5px solid #ED213A;
 }
 
 .navbar .navigation{
@@ -56,12 +67,12 @@ a:hover {
 }
 
 .navbar a {
-    color: #fff;
+    color: #202020;
     transition: 0.5s;
 }
 
 .navbar a:hover {
-    color: #fff;
+    color: #ED213A;
     transition: 0.5s;
 }
 
@@ -81,8 +92,14 @@ a:hover {
     padding: 20px;
 }
 
+.footer{
+    min-height: 100px;
+    background: #202020;
+}
+
 .form{
-    max-width: 400px;
+    max-width: 70%;
+    margin: 0 auto;
 }
 
 .form form input{
@@ -106,4 +123,68 @@ a:hover {
     width: 100%;
     cursor: pointer;
     font-weight: 800;
+}
+
+.form form textarea{
+    display: block;
+    padding: 5px 0;
+    border: unset;
+    border-bottom: 2px solid #202020;
+    border-radius: 0%;
+    margin-bottom:15px;
+    width: 100%;
+    height: 100px;
+}
+
+.post{
+    width: 70%;
+    clear: both;
+    margin: 10px auto;
+    padding: 5px;
+    background: #efefef;
+}
+
+.post .profile-image{
+    width: 5%;
+    float: left;
+}
+
+.post h4{
+    width: 90%;
+    float: left;
+    margin: 0px 0px 30px 10px;
+}
+
+.post .post-content{
+    width: 100%;
+    float: left;
+}
+
+.post .date p{
+    font-size: 10px;
+    width: 100%;
+    margin: 0 auto;
+    clear: both;
+    color: rgba(0,0,0,0.55);
+}
+
+.centered{
+    text-align: center;
+}
+
+.alert{
+    width: 70%;
+    padding: 10px;
+    margin: 10px auto;
+    transition: 0.5s linear;
+    color: #fff;
+    font-weight: bold;
+}
+
+.alert-danger{
+    background: #ED213A;
+}
+
+.alert-success{
+    background: #00bb31;
 }
