--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,191 +1,211 @@
-body{
-    margin: 0px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #202020;
-    background: url('https://danpicklo.files.wordpress.com/2020/11/5925e1459589f92598c1f906a5a79397.jpg');
-    background-size: cover;
+body {
+	margin: 0px;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+		sans-serif;
+	color: #202020;
+	/*background: url("https://danpicklo.files.wordpress.com/2020/11/5925e1459589f92598c1f906a5a79397.jpg");*/
+	background-size: cover;
 }
 
-h1{
-    color: #ED213A;
-    font-size: 40px;
+h1 {
+	color: #ed213a;
+	font-size: 40px;
 }
 
 a {
-    color: #93291E;
-    transition: 0.5s;
+	color: #93291e;
+	transition: 0.5s;
+}
+
+i {
+	padding: 5px;
 }
 
 a:hover {
-    color: #000;
-    transition: 0.5s;
+	color: #000;
+	transition: 0.5s;
 }
 
-.container{
-    width: 70%;
-    clear:both;
-    margin: 0 auto;
-    min-height: 71vh;
+.container {
+	width: 70%;
+	clear: both;
+	margin: 0 auto;
+	min-height: 71vh;
 }
 
-.container-head{
-    width: 70%;
-    clear:both;
-    margin: 0 auto;
-    background: #fff;
+.container-head {
+	width: 70%;
+	clear: both;
+	margin: 0 auto;
+	background: #fff;
 }
 
-.sidebar{
-    width: 20%;
-    float: left;
-    padding: 10px 20px;
-    background-color: #ED213A;
-    color: #fff;
-    min-height: 1000px;
+.sidebar {
+	width: 20%;
+	float: left;
+	padding: 10px 20px;
+	background-color: #ed213a;
+	color: #fff;
+	min-height: 1000px;
 }
 
-.navbar{
-    background-color: #fff;
-    margin: 0;
-    padding: 0;
-    min-height: 150px;
-    box-shadow: 0px 7px 17px 0px rgba(0,0,0,0.55);
-    z-index: 9999;
-    position: relative;
-    border-bottom: 5px solid #ED213A;
+.navbar {
+	background-color: #fff;
+	margin: 0;
+	padding: 0;
+	min-height: 150px;
+	box-shadow: 0px 7px 17px 0px rgba(0, 0, 0, 0.55);
+	z-index: 9999;
+	position: relative;
+	border-bottom: 5px solid #ed213a;
 }
 
-.navbar .navigation{
-    width: 40%;
-    float:right;
-    margin: 10px;
+.navbar .navigation {
+	width: 40%;
+	float: right;
+	margin: 10px;
 }
 
-.navbar .navigation ul li{
-    max-width: 100px;
-    padding: 0 10px;
-    float:right;
+.navbar .navigation ul li {
+	max-width: 100px;
+	padding: 0 10px;
+	float: right;
 }
 
 .navbar a {
-    color: #202020;
-    transition: 0.5s;
+	color: #202020;
+	transition: 0.5s;
 }
 
 .navbar a:hover {
-    color: #ED213A;
-    transition: 0.5s;
+	color: #ed213a;
+	transition: 0.5s;
 }
 
-.navbar ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.navbar ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
-.navbar .logo{
-    width: 50%;
-    float: left;
+.navbar .logo {
+	width: 50%;
+	float: left;
 }
 
-.navbar .logo img{
-    width: 450px;
-    padding: 20px;
+.navbar .logo img {
+	width: 450px;
+	padding: 20px;
 }
 
-.footer{
-    min-height: 100px;
-    background: #202020;
+.footer {
+	min-height: 100px;
+	background: #202020;
 }
 
-.form{
-    max-width: 70%;
-    margin: 0 auto;
+.form {
+	max-width: 70%;
+	margin: 0 auto;
 }
 
-.form form input{
-    display: block;
-    padding: 5px 0;
-    border: unset;
-    border-bottom: 2px solid #202020;
-    border-radius: 0%;
-    margin-bottom:15px;
-    width: 100%;
+.form form input {
+	display: block;
+	padding: 5px 0;
+	border: unset;
+	border-bottom: 2px solid #202020;
+	border-radius: 0%;
+	margin-bottom: 15px;
+	width: 100%;
 }
 
-.form form button{
-    display: block;
-    padding: 10px;
-    border: 1px solid #ED213A;
-    background-color: #ED213A;
-    border-radius: 0%;
-    margin-bottom:5px;
-    color: #fff;
-    width: 100%;
-    cursor: pointer;
-    font-weight: 800;
+.form form button {
+	display: block;
+	padding: 10px;
+	border: 1px solid #ed213a;
+	background-color: #ed213a;
+	border-radius: 0%;
+	margin-bottom: 5px;
+	color: #fff;
+	width: 100%;
+	cursor: pointer;
+	font-weight: 800;
 }
 
-.form form textarea{
-    display: block;
-    padding: 5px 0;
-    border: unset;
-    border-bottom: 2px solid #202020;
-    border-radius: 0%;
-    margin-bottom:15px;
-    width: 100%;
-    height: 100px;
+.form form textarea {
+	display: block;
+	padding: 5px 0;
+	border: unset;
+	border-bottom: 2px solid #202020;
+	border-radius: 0%;
+	margin-bottom: 15px;
+	width: 100%;
+	height: 100px;
 }
 
-.post{
-    width: 70%;
-    clear: both;
-    margin: 10px auto;
-    padding: 5px;
-    background: #efefef;
+.post {
+	width: 70%;
+	clear: both;
+	margin: 10px auto;
+	padding: 5px;
+	background: #efefef;
 }
 
-.post .profile-image{
-    width: 5%;
-    float: left;
+.post .profile-image {
+	width: 5%;
+	float: left;
 }
 
-.post h4{
-    width: 90%;
-    float: left;
-    margin: 0px 0px 30px 10px;
+.post h4 {
+	width: 90%;
+	float: left;
+	margin: 0px 0px 30px 10px;
 }
 
-.post .post-content{
-    width: 100%;
-    float: left;
+.post .post-content {
+	width: 100%;
+	float: left;
 }
 
-.post .date p{
-    font-size: 10px;
-    width: 100%;
-    margin: 0 auto;
-    clear: both;
-    color: rgba(0,0,0,0.55);
+.post .date p {
+	font-size: 10px;
+	width: 100%;
+	margin: 0 auto;
+	clear: both;
+	color: rgba(0, 0, 0, 0.55);
 }
 
-.centered{
-    text-align: center;
+.post-container {
+	width: 70%;
+	clear: both;
+	margin: 0 auto;
 }
 
-.alert{
-    width: 70%;
-    padding: 10px;
-    margin: 10px auto;
-    transition: 0.5s linear;
-    color: #fff;
-    font-weight: bold;
+.centered {
+	text-align: center;
 }
 
-.alert-danger{
-    background: #ED213A;
+.alert {
+	width: 70%;
+	padding: 10px;
+	margin: 10px auto;
+	transition: 0.5s linear;
+	color: #fff;
+	font-weight: bold;
 }
 
-.alert-success{
-    background: #00bb31;
+.alert-danger {
+	background: #ed213a;
+}
+
+.alert-success {
+	background: #00bb31;
+}
+
+.profile-sidebar {
+	position: absolute;
+	top: 150px;
+	padding: 25px;
+	background: #fff;
+	text-align: center;
+	max-width: 20%;
 }
