--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,7 +57,6 @@ a:hover {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	background-color: #fff;
 	margin: 0;
 	padding: 0;
 	min-height: 150px;
@@ -236,7 +235,6 @@ a:hover {
 	position: absolute;
 	top: 150px;
 	padding: 25px;
-	background: #fff;
 	text-align: center;
 	max-width: 20%;
 }
@@ -250,6 +248,7 @@ a:hover {
 	transition: 0.1s linear;
 	border: 0px;
 	cursor: pointer;
+	background-color: unset;
 }
 
 .inputs button:hover {
